[package]
name = "ssh-exec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.1", features = ["derive"] }
rpassword = "7.2.0"
ssh2 = "0.9.4"
tokio = {version = "1.27.0", features = ["full"] }
